Improved mixture of GP

--- a/notebooks/sidekick-mixture.ipynb
+++ b/notebooks/sidekick-mixture.ipynb
@@ -4,26 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sidekick - Mixture of Gaussessus Procien\n",
+    "# Sidekick - Mixture of Gaussessus Prociens\n",
     "We train a GP on the successful projects and one on the failed projects."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "warning in stationary: failed to import cython module: falling back to numpy\n",
-      "warning in stationary: failed to import cython module: falling back to numpy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import os\n",
@@ -48,8 +39,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load data and separate successful from failed projects"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -60,34 +58,247 @@
      "text": [
       "Loading projects...\n",
       "Loading statuses...\n",
-      "Converting to project instances...Loading projects...\n",
-      "Loading statuses...\n",
       "Converting to project instances...\n",
-      "Data loaded.\n",
-      "Data loaded.\n",
-      "\n"
+      "Data loaded.\n"
      ]
     }
    ],
    "source": [
     "sk = Sidekick()\n",
     "sk.load()\n",
-    "projects_train, projects_test = sk.split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "projects_train, projects_test = sk.split()\n",
     "successful = [project.money for project in projects_train if project.successful]\n",
     "failed = [project.money for project in projects_train if not project.successful]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train GP-LIN on successful projects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 1)\n",
+      "(1000, 6192)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       ".pd{\n",
+       "    font-family: \"Courier New\", Courier, monospace !important;\n",
+       "    width: 100%;\n",
+       "    padding: 3px;\n",
+       "}\n",
+       "</style>\n",
+       "\n",
+       "<p class=pd>\n",
+       "<b>Model</b>: GP regression<br>\n",
+       "<b>Log-likelihood</b>: 2285410.30372<br>\n",
+       "<b>Number of Parameters</b>: 3<br>\n",
+       "<b>Number of Optimization Parameters</b>: 3<br>\n",
+       "<b>Updates</b>: True<br>\n",
+       "</p>\n",
+       "<style type=\"text/css\">\n",
+       ".tg  {font-family:\"Courier New\", Courier, monospace !important;padding:2px 3px;word-break:normal;border-collapse:collapse;border-spacing:0;border-color:#DCDCDC;margin:0px auto;width:100%;}\n",
+       ".tg td{font-family:\"Courier New\", Courier, monospace !important;font-weight:bold;color:#444;background-color:#F7FDFA;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#DCDCDC;}\n",
+       ".tg th{font-family:\"Courier New\", Courier, monospace !important;font-weight:normal;color:#fff;background-color:#26ADE4;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#DCDCDC;}\n",
+       ".tg .tg-left{font-family:\"Courier New\", Courier, monospace !important;font-weight:normal;text-align:left;}\n",
+       ".tg .tg-right{font-family:\"Courier New\", Courier, monospace !important;font-weight:normal;text-align:right;}\n",
+       "</style>\n",
+       "<table class=\"tg\">\n",
+       "<tr>\n",
+       "  <th><b>GP_regression.</b></th>\n",
+       "  <th><b>Value</b></th>\n",
+       "  <th><b>Constraint</b></th>\n",
+       "  <th><b>Prior</b></th>\n",
+       "  <th><b>Tied to</b></th>\n",
+       "</tr>\n",
+       "<tr><td class=tg-left>rbf.variance           </td><td class=tg-right>   64.5928862385</td><td class=tg-left>   +ve    </td><td class=tg-left>     </td><td class=tg-left>       </td></tr>\n",
+       "<tr><td class=tg-left>rbf.lengthscale        </td><td class=tg-right>   10.1985593359</td><td class=tg-left>   +ve    </td><td class=tg-left>     </td><td class=tg-left>       </td></tr>\n",
+       "<tr><td class=tg-left>Gaussian_noise.variance</td><td class=tg-right>0.00769646593595</td><td class=tg-left>   +ve    </td><td class=tg-left>     </td><td class=tg-left>       </td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<GPy.models.gp_regression.GPRegression at 0x106a53990>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "X_train_s = np.ndarray(shape=(len(successful[0]), 1), buffer=np.arange(len(successful[0])), dtype=int) \n",
+    "Y_train_s = np.array(successful).T\n",
+    "print X_train_s.shape\n",
+    "print Y_train_s.shape\n",
+    "\n",
+    "kernel = GPy.kern.RBF(input_dim=1)\n",
+    "m_s = GPy.models.GPRegression(X_train_s, Y_train_s, kernel)\n",
+    "m_s.optimize()\n",
+    "display(m_s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train GP-LIN on failed projects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 1)\n",
+      "(1000, 6641)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       ".pd{\n",
+       "    font-family: \"Courier New\", Courier, monospace !important;\n",
+       "    width: 100%;\n",
+       "    padding: 3px;\n",
+       "}\n",
+       "</style>\n",
+       "\n",
+       "<p class=pd>\n",
+       "<b>Model</b>: GP regression<br>\n",
+       "<b>Log-likelihood</b>: 19380194.9297<br>\n",
+       "<b>Number of Parameters</b>: 3<br>\n",
+       "<b>Number of Optimization Parameters</b>: 3<br>\n",
+       "<b>Updates</b>: True<br>\n",
+       "</p>\n",
+       "<style type=\"text/css\">\n",
+       ".tg  {font-family:\"Courier New\", Courier, monospace !important;padding:2px 3px;word-break:normal;border-collapse:collapse;border-spacing:0;border-color:#DCDCDC;margin:0px auto;width:100%;}\n",
+       ".tg td{font-family:\"Courier New\", Courier, monospace !important;font-weight:bold;color:#444;background-color:#F7FDFA;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#DCDCDC;}\n",
+       ".tg th{font-family:\"Courier New\", Courier, monospace !important;font-weight:normal;color:#fff;background-color:#26ADE4;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#DCDCDC;}\n",
+       ".tg .tg-left{font-family:\"Courier New\", Courier, monospace !important;font-weight:normal;text-align:left;}\n",
+       ".tg .tg-right{font-family:\"Courier New\", Courier, monospace !important;font-weight:normal;text-align:right;}\n",
+       "</style>\n",
+       "<table class=\"tg\">\n",
+       "<tr>\n",
+       "  <th><b>GP_regression.</b></th>\n",
+       "  <th><b>Value</b></th>\n",
+       "  <th><b>Constraint</b></th>\n",
+       "  <th><b>Prior</b></th>\n",
+       "  <th><b>Tied to</b></th>\n",
+       "</tr>\n",
+       "<tr><td class=tg-left>rbf.variance           </td><td class=tg-right>   0.010137808305</td><td class=tg-left>   +ve    </td><td class=tg-left>     </td><td class=tg-left>       </td></tr>\n",
+       "<tr><td class=tg-left>rbf.lengthscale        </td><td class=tg-right>    7.05564688388</td><td class=tg-left>   +ve    </td><td class=tg-left>     </td><td class=tg-left>       </td></tr>\n",
+       "<tr><td class=tg-left>Gaussian_noise.variance</td><td class=tg-right>6.44591117131e-05</td><td class=tg-left>   +ve    </td><td class=tg-left>     </td><td class=tg-left>       </td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<GPy.models.gp_regression.GPRegression at 0x106ac1450>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "X_train_f = np.ndarray(shape=(len(failed[0]), 1), buffer=np.arange(len(failed[0])), dtype=int) \n",
+    "Y_train_f = np.array(failed).T\n",
+    "print X_train_f.shape\n",
+    "print Y_train_f.shape\n",
+    "\n",
+    "kernel = GPy.kern.RBF(input_dim=1)\n",
+    "m_f = GPy.models.GPRegression(X_train_f, Y_train_f, kernel)\n",
+    "m_f.optimize()\n",
+    "display(m_f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def classify_project(project, m_s, m_f, threshold=0.8):\n",
+    "    money = project.money[:int(np.floor(len(project.money)*threshold))]\n",
+    "    X_test = np.ndarray(shape=(len(money), 1), buffer=np.arange(len(money)), dtype=int) \n",
+    "    Y_test = np.ndarray(shape=(len(money), 1), buffer=money, dtype=int)\n",
+    "    m_s_test.set_XY(X=X_test, Y=Y_test)\n",
+    "    m_f_test.set_XY(X=X_test, Y=Y_test)\n",
+    "    l_successful = m_s_test.log_likelihood()\n",
+    "    l_failed = m_f_test.log_likelihood()\n",
+    "\n",
+    "    return int(l_successful > l_failed)\n",
+    "    \n",
+    "m_s_test = m_s.copy()\n",
+    "m_f_test = m_f.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3209\n",
+      "Project 1693026558 is failed\n",
+      "Predicted successful\n",
+      "-8.76789212189e+38\n",
+      "-1.3636070992e+41\n"
+     ]
+    }
+   ],
+   "source": [
+    "project_test = projects_test[0]\n",
+    "print len(projects_test)\n",
+    "print project_test\n",
+    "state = classify_project(project_test, m_s_test, m_f_test)\n",
+    "print \"Predicted %s\" % \"successful\" if state else \"failed\"\n",
+    "\n",
+    "print m_s_test.log_likelihood()\n",
+    "print m_f_test.log_likelihood()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run experiment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -95,35 +306,20 @@
    },
    "outputs": [],
    "source": [
-    "X_train = np.ndarray(shape=(len(successful[0]), 1), buffer=np.arange(len(successful[0])), dtype=int) \n",
-    "Y_train = np.array(successful).T\n",
-    "print X_train.shape\n",
-    "print Y_train.shape\n",
-    "\n",
-    "SE = GPy.kern.RBF(input_dim=1)\n",
-    "m = GPy.models.GPRegression(X_train, Y_train, SE)\n",
-    "m.optimize()\n",
-    "display(m)\n",
-    "m.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X_train = np.ndarray(shape=(len(failed[0]), 1), buffer=np.arange(len(failed[0])), dtype=int) \n",
-    "Y_train = np.array(failed).T\n",
-    "print X_train.shape\n",
-    "print Y_train.shape\n",
-    "\n",
-    "SE = GPy.kern.RBF(input_dim=1)\n",
-    "m = GPy.models.GPRegression(X_train, Y_train, SE)\n",
-    "m.optimize()\n",
-    "display(m)"
+    "accuracy = []\n",
+    "predicted = []\n",
+    "actual = []\n",
+    "projects_test_small = projects_test[:200]\n",
+    "np.random.shuffle(projects_test_small)\n",
+    "for project in projects_test_small:\n",
+    "    state = classify_project(project, m_s_test, m_f_test)\n",
+    "    predicted.append(state)\n",
+    "    actual.append(int(project.successful))\n",
+    "    accuracy.append(int(state == project.successful))\n",
+    "print \"Accuracy %s\" % np.mean(accuracy)\n",
+    "#print predicted\n",
+    "#print actual\n",
+    "#print accuracy"
    ]
   }
  ],
