--- a/notebooks/sidekick-mixture-an-other-approach.ipynb
+++ b/notebooks/sidekick-mixture-an-other-approach.ipynb
@@ -6,11 +6,45 @@
    "source": [
     "# Sidekick - Mixture of Gaussian Processes: An Other Approach\n",
     "\n",
-    "So far, we were approching the problem as time series regression. For a given project $n$, we were trying to predict the pledged money $\\mathbf{f}_{t:T}^{(n)}$ at future time indices $\\mathbf{x}_{t:T}$ after observing the values $\\mathbf{y}_{1:t}$ at time indices $\\mathbf{x}_{1:t}$. The hyperparameters of the GP were learned over $N$ projects, by maximizing the marginal log-likelihood.\n",
+    "### Single-Project Regression\n",
+    "We are approaching the problem as time series regression, considering only one project. Our dataset $\\mathcal{D} = \\left\\{ (x_i, y_i) \\mid i = 1, ..., n \\right\\}$ consists of N observations, with $x_i$ the time index of the amount of money $y_i$. Hence, we have $X = [1, ..., N]^T$ an $(Nx1)$ matrix of time indices and $\\mathbf{y} = [y_1, ..., y_N]^T$ and vector of observed values. We model the pledged money $f(\\mathbf{x})$ at time indices $\\mathbf{x}$ as a Gaussian Process:\n",
     "\n",
-    "Instead of using the the time as input and trying to predict the output at new time indices, we now consider the value at each time step as input (`y` becomes `x`) and the last time index as the output. Formally, we had:\n",
+    "$$f(\\mathbf{x}) \\sim GP \\left( m(\\mathbf{x}), cov(\\mathbf{x}, \\mathbf{x'}) \\right) $$\n",
     "\n",
-    "$$p()$$"
+    "For a given project $n$, we are trying to predict the pledged money $\\mathbf{f}_*^{(n)} = \\mathbf{y}_{t:T}^{(n)}$ at future time indices $\\mathbf{x}_*^{(n)} = \\mathbf{x}_{t:T}^{(n)} = \\mathbf{x}_{t:T} = [t,...,T]^T$ after observing the values $\\mathbf{y}^{(n)} = \\mathbf{y}_{1:t}^{(n)}$ at time indices $\\mathbf{x} = \\mathbf{x}_{1:t}$. \n",
+    "$$\\mathbf{f}_{t:T}^{(n)} \\mid \\mathbf{x}_{1:t}, \\mathbf{y}_{1:t}, \\mathbf{\\theta} \\sim GP(\\mathbf{\\bar{f}_{t:T}^{(n)}}, cov(\\mathbf{f}_{t:T}^{(n)})), $$\n",
+    "\n",
+    "The hyperparameters $\\mathbf{\\theta}$ of the GP are learned over $X$ an $(Mx1)$ matrix of input variables and $Y$ an $(MxN)$ matrix of observations corresponding to the $M$ inputs for $N$ projects, by maximizing the marginal log-likelihood:\n",
+    "\n",
+    "$$\\theta^* = \\underset{\\theta} {argmax} \\log p(Y \\mid X, \\theta),$$\n",
+    "\n",
+    "where \n",
+    "\n",
+    "$$X = \\mathbf{x} = [1, 2, 3, ..., M]^T$$\n",
+    "$$Y = \\left[y_{11}, y_{12}, ..., y_{1N} \\right].$$\n",
+    "\n",
+    "Formally, we were computing:\n",
+    "\n",
+    "$$p(\\mathbf{f}_{t:T}^{(n)} \\mid \\mathbf{x}_{1:t}, \\mathbf{y}_{1:t}, \\mathbf{\\theta})$$\n",
+    "\n",
+    "\n",
+    "where  was learned \n",
+    "\n",
+    "We couldn't obtain good results with this approach, as it seems that the hyperparameters $\\theta$ are not learned well. Indeed, the predictions always fall back very quickly to the mean of the GP. By initializing one of the kernel with a large lenghtscale, we could obtain the general trend for one project and hence obtain some quite good results, but this approach didn't work when considering several projects for learning or trying to do the predictions for another project.\n",
+    "\n",
+    "Therefore, we tried a second approach, namely classification of successful projects. We train one GP on the successful projects, one on the failed projects and try to determine whether a new project will be successful or not. To do so, we would learn $\\theta_s$ the hyperparameters of a GP over the *successful* projects only and $\\theta_f$ the hyperparameters of a GP over the *failed* projects. Formally, we maximize the marginal log-likelihoods\n",
+    "\n",
+    "$$\\theta_s^* = \\underset{\\theta} {argmax} \\log p(Y_s \\mid X_s, \\theta)$$\n",
+    "$$\\theta_f^* = \\underset{\\theta} {argmax} \\log p(Y_f \\mid X_f, \\theta)$$\n",
+    "\n",
+    "where $s$ and $f$ denotes the data of the successful and failed projects respectively. We then determine the class of a new, partially observed project as\n",
+    "\n",
+    "$$c_{*} = s\\text{ if } \\log p(\\mathbf{y}_{1:t}^{(n)} \\mid \\mathbf{x}_{1:t}, \\theta_s) > \\log p(\\mathbf{y}_{1:t}^{(n)} \\mid \\mathbf{x}_{1:t} \\mid \\theta_f)$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Instead of using the time as input and trying to predict the output at new time indices, we now consider the value at each time step as input (`y` becomes `x`) and the last time index as the output. "
    ]
   },
   {
@@ -85,6 +119,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "N = 1000\n",
+    "t = 20\n",
+    "T = 999"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 129,
    "metadata": {
     "collapsed": false
@@ -144,13 +191,13 @@
     }
    ],
    "source": [
-    "successful_light = successful[:1000]\n",
-    "X_train_s = np.ndarray(shape=(len(successful_light), 20), buffer=np.array([money[0:20] for money in successful_light]), dtype=float) \n",
-    "Y_train_s = np.expand_dims(np.array([money[-1] for money in successful_light]), axis=1)\n",
+    "successful_light = successful[:N]\n",
+    "X_train_s = np.ndarray(shape=(len(successful_light), t), buffer=np.array([money[0:t] for money in successful_light]), dtype=float) \n",
+    "Y_train_s = np.expand_dims(np.array([money[T] for money in successful_light]), axis=1)\n",
     "print X_train_s.shape\n",
     "print Y_train_s.shape\n",
     "\n",
-    "kernel = GPy.kern.Linear(input_dim=20)\n",
+    "kernel = GPy.kern.Linear(input_dim=t)\n",
     "m_s = GPy.models.GPRegression(X_train_s, Y_train_s, kernel)\n",
     "m_s.optimize()\n",
     "display(m_s)"
