Finished single project regression and moved text to a separate notebook

--- a/notebooks/sidekick-mixture-an-other-approach.ipynb
+++ b/notebooks/sidekick-mixture-an-other-approach.ipynb
@@ -7,9 +7,37 @@
     "# Sidekick - Mixture of Gaussian Processes: An Other Approach\n",
     "\n",
     "### Single-Project Regression\n",
-    "We are approaching the problem as time series regression, considering only one project. Our dataset $\\mathcal{D} = \\left\\{ (x_i, y_i) \\mid i = 1, ..., n \\right\\}$ consists of N observations, with $x_i$ the time index of the amount of money $y_i$. Hence, we have $X = [1, ..., N]^T$ an $(Nx1)$ matrix of time indices and $\\mathbf{y} = [y_1, ..., y_N]^T$ and vector of observed values. We model the pledged money $f(\\mathbf{x})$ at time indices $\\mathbf{x}$ as a Gaussian Process:\n",
+    "#### Model\n",
+    "We are approaching the problem as time series regression, considering only one project. Our dataset $\\mathcal{D} = \\left\\{ (x_i, y_i) \\mid i = 1, ..., n \\right\\}$ consists of $N$ observations, with $x_i$ the time index of the amount of money $y_i$. Hence, we have $X = [1, ..., N]^T$ an $(Nx1)$ matrix of time indices and $\\mathbf{y} = [y_1, ..., y_N]^T$ and vector of observed values. We model the pledged money $f(\\mathbf{x})$ at time indices $\\mathbf{x}$ as a Gaussian Process:\n",
     "\n",
-    "$$f(\\mathbf{x}) \\sim GP \\left( m(\\mathbf{x}), cov(\\mathbf{x}, \\mathbf{x'}) \\right) $$\n",
+    "$$f(\\mathbf{x}) \\sim GP \\left( m(\\mathbf{x}), k(\\mathbf{x}, \\mathbf{x'}) \\right). $$\n",
+    "\n",
+    "Our goal is to predict the future values of the pledged money $\\mathbf{f}_* = \\mathbf{f}_{t:N} = f(X_{t:N})$ at future time indices $X_* = X_{t:N} = [t, ..., N]^T$ after observing the values $\\mathbf{y} = \\mathbf{y}_{1:t} = [y_1, ..., y_t]^T$ at time indices $X = X_{1:t} = [1, ..., t]$. In the GP framework, we can compute this prediction using\n",
+    "\n",
+    "$$\\mathbf{f}_* \\mid X, \\mathbf{y}, X_* \\sim \\mathcal{N}\\left(\\overline{\\mathbf{f}}_*, \\text{ cov}(\\mathbf{f}_*)  \\right) \\\\\n",
+    "\\overline{\\mathbf{f}}_* = K(X_*, X) \\left[ K(X, X) + \\sigma_n^2I \\right]^{-1}\\mathbf{y} \\\\\n",
+    "\\text{ cov}(\\mathbf{f}_*) = K(X_*, X_*) - K(X_*, X)\\left[ K(X, X) + \\sigma_n^2I \\right]^{-1}K(X, X_*).\n",
+    "$$ \n",
+    "\n",
+    "Finally, the kernel's (hyper)parameters $\\theta$ are learned by maximizing the *log  marginal likehood*\n",
+    "\n",
+    "$$\\theta_* = \\underset{\\theta} {argmax} \\log p(\\mathbf{y} \\mid X, \\theta).$$\n",
+    "\n",
+    "#### Results\n",
+    "The major problem in this context was that the predictive mean $\\mathbf{f}_*$ always falls back to the mean $m(\\mathbf{x})$ very quickly. One solution has been to combine two squared-exponential kernels and initializing one of them to a large length-scale in order to capture the global trend. This yields to some reasonable result. However, when applying the same model to another ones (($\\theta$ learned over one project and used to predict another) gives very poor performance.\n",
+    "\n",
+    "\n",
+    "### Multi-Project Regression\n",
+    "#### Model\n",
+    "Hence, our next idea is to consider several projects at the same time and try to learn the hyperparameters $\\theta$ over various time series. Our dataset is now $\\mathcal{D} = \\left\\{ (x_i, \\mathbf{y}_i) \\mid i = 1, ..., n \\right\\}$ \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "For a given project $n$, we are trying to predict the pledged money $\\mathbf{f}_*^{(n)} = \\mathbf{y}_{t:T}^{(n)}$ at future time indices $\\mathbf{x}_*^{(n)} = \\mathbf{x}_{t:T}^{(n)} = \\mathbf{x}_{t:T} = [t,...,T]^T$ after observing the values $\\mathbf{y}^{(n)} = \\mathbf{y}_{1:t}^{(n)}$ at time indices $\\mathbf{x} = \\mathbf{x}_{1:t}$. \n",
     "$$\\mathbf{f}_{t:T}^{(n)} \\mid \\mathbf{x}_{1:t}, \\mathbf{y}_{1:t}, \\mathbf{\\theta} \\sim GP(\\mathbf{\\bar{f}_{t:T}^{(n)}}, cov(\\mathbf{f}_{t:T}^{(n)})), $$\n",
