Renamed notebooks for clearness.

--- a/notebooks/sidekick-formal-definition.ipynb
+++ b/notebooks/sidekick-formal-definition.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "with $\\overline{\\mathbf{f}}_{t:T}^{(p)} \\equiv \\overline{\\mathbf{f}}_*$ as before and $\\text{ cov}(\\mathbf{f}_{t:T}^{(p)}) \\equiv \\text{ cov}(\\mathbf{f}_*)$. The hyperparameters $\\mathbf{\\theta}$ of the GP are learned by maximizing the log marginal likelihood over all the projects, that is\n",
     "\n",
-    "$$\\theta^* = \\underset{\\theta} {\\arg\\max} \\sum_{p=1}^P \\log p(\\mathbf{y}^{(p)} \\mid X, \\theta).$$\n",
+    "$$\\theta_* = \\underset{\\theta} {\\arg\\max} \\sum_{p=1}^P \\log p(\\mathbf{y}^{(p)} \\mid X, \\theta).$$\n",
     "\n",
     "#### Results\n",
     "Again, we couldn't obtain good results with this approach, as the predictions always fall back very quickly to the mean of the GP. **[MORE DETAILS]**\n",
